Finished Chapter "Evaluation"

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -839,3 +839,35 @@ URL = {https://arxiv.org/pdf/1606.05336.pdf}
   title = {Wikidata through the Eyes of DBpedia},
   year = 2017
 }
+@article{Hawkins2004,
+    author = {Hawkins, D. M.},
+    citeulike-article-id = {1978900},
+    citeulike-linkout-0 = {http://pubs3.acs.org/acs/journals/doilookup?in\_doi=10.1021/ci0342472},
+    journal = {Journal of Chemical Information and Computer Sciences},
+    keywords = {diplomarbeit, ml},
+    number = {1},
+    pages = {1--12},
+    posted-at = {2007-11-25 11:21:26},
+    priority = {2},
+    title = {{The Problem of Overfitting}},
+    url = {http://pubs3.acs.org/acs/journals/doilookup?in\_doi=10.1021/ci0342472},
+    volume = {44},
+    year = {2004}
+}
+@article{Srivastava2014,
+ author = {Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
+ title = {Dropout: A Simple Way to Prevent Neural Networks from Overfitting},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {January 2014},
+ volume = {15},
+ number = {1},
+ month = jan,
+ year = {2014},
+ issn = {1532-4435},
+ pages = {1929--1958},
+ numpages = {30},
+ url = {http://dl.acm.org/citation.cfm?id=2627435.2670313},
+ acmid = {2670313},
+ publisher = {JMLR.org},
+ keywords = {deep learning, model combination, neural networks, regularization},
+} 
