--- a/thesis/ontology_learning.ltx
+++ b/thesis/ontology_learning.ltx
@@ -43,7 +43,7 @@ which mainly support the task of refining and maintaining the current ontology.
 For example, \fullcite{Stratan2016} develops a taxonomy browser for Wikidata, which is able to evaluate the quality of the taxonomy by detecting different types 
 of cycles, redundancies, errors and unlinked classes. This tool is an ontology learning component, as it provides the ability to browse and evaluate the ontology of Wikidata.
 
-\subsubsection{Approaches for learning taxonomic relations}
+\subsubsection{Approaches for learning taxonomic relations}\label{section:taxonomy learning}
 A subgroup of algorithms for OL is concerned with learning taxonomic relations.
 The following approaches, categorized by \fullcite{Cimiano2009}, use text as input.
 
