Finished German abstract

--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -23,16 +23,16 @@
 
 \maketitle %prints the cover page  an empty page if two-sided print
 
-\begin{abstract}
-\textbf{TODO: english abstract}
-\end{abstract}
-
 \selectlanguage{german}
 \begin{abstract}
-\textbf{TODO: german abstract}
+\import{./}{abstract_de.ltx}
 \end{abstract}
 
 \selectlanguage{english}
+\begin{abstract}
+\import{./}{abstract_en.ltx}
+\end{abstract}
+
 
 \pagenumbering{roman}
 
