--- a/thesis/preamble.sty
+++ b/thesis/preamble.sty
@@ -1,6 +1,6 @@
 \ProvidesPackage{preamble}
 
-\usepackage[english,german]{babel}% English and new German spelling
+\usepackage[english,ngerman,german]{babel}% English and new German spelling
 \usepackage[utf8]{inputenc}% correct input encoding
 \usepackage[T1]{fontenc}% correct output encoding
 \usepackage{graphicx}% enhanced support for graphics
