Added appendix "source code"

--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -89,4 +89,7 @@
 \section{Appendix: Graphs}\label{section:graphs}
 \import{./}{appendix_graphs.ltx}
 
+\section{Appendix: Source code}
+\import{./}{appendix_source_code.ltx}
+
 \end{document}
